--- a/index.html
+++ b/index.html
@@ -21,7 +21,26 @@
         <div class="col-xs-4 col-xs-offset-5 hidden-xs">Menù Desktop</div>
         <div class="col-xs-4 col-xs-offset-5 visible-xs">Menù Mobile</div>
       </div>
-      
+
+      <div class="row pv-header text-center">
+        <div class="row pv-header-img">
+          <div class="col-xs-12">Immagine</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">Start Bootstrap</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-2">Riga</div>
+          <div class="col-xs-2">Stella</div>
+          <div class="col-xs-3">Riga</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6 col-sm-4">Graphic Artist</div>
+          <div class="col-xs-6 col-sm-4">Web Designer</div>
+          <div class="col-xs-12 col-sm-4">Illustrator</div>
+        </div>
+      </div>
+
 
     </div>
     
