--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <div class="container debug">
+    <div class="container">
       <div class="row pv-nav">
         <div class="col-xs-3">Logo</div>
         <div class="col-xs-4 col-xs-offset-5 hidden-xs">Menù Desktop</div>
@@ -23,24 +23,19 @@
       </div>
 
       <div class="row pv-header text-center">
-        <div class="row pv-header-img">
-          <div class="col-xs-12">Immagine</div>
-        </div>
-        <div class="row">
+          <div class="col-xs-12 pv-header-img">Immagine</div>
           <div class="col-xs-12">Start Bootstrap</div>
-        </div>
-        <div class="row">
           <div class="col-xs-3 col-xs-offset-2">Riga</div>
           <div class="col-xs-2">Stella</div>
           <div class="col-xs-3">Riga</div>
-        </div>
-        <div class="row">
           <div class="col-xs-6 col-sm-4">Graphic Artist</div>
           <div class="col-xs-6 col-sm-4">Web Designer</div>
           <div class="col-xs-12 col-sm-4">Illustrator</div>
-        </div>
       </div>
 
+      <div class="row">
+
+      </div>
 
     </div>
     
