--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
       </div>
 
       <div class="row pv-header text-center">
-          <div class="col-xs-12 pv-header-img">Immagine</div>
-          <div class="col-xs-12">Start Bootstrap</div>
+        <div class="col-xs-12 pv-header-img">Immagine</div>
+        <div class="col-xs-12">Start Bootstrap</div>
+        <div class="row">
           <div class="col-xs-3 col-xs-offset-2">Riga</div>
           <div class="col-xs-2">Stella</div>
           <div class="col-xs-3">Riga</div>
+        </div>
+        <div class="row">
           <div class="col-xs-6 col-sm-4">Graphic Artist</div>
           <div class="col-xs-6 col-sm-4">Web Designer</div>
           <div class="col-xs-12 col-sm-4">Illustrator</div>
+        </div>
       </div>
 
-      <div class="row">
+      <div class="row pv-porfolio">
 
       </div>
 
