--- a/index.html
+++ b/index.html
@@ -37,8 +37,21 @@
         </div>
       </div>
 
-      <div class="row pv-porfolio">
-
+      <div class="row pv-portfolio text-center">
+        <div class="col-xs-12">Portfolio</div>
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-2">Riga</div>
+          <div class="col-xs-2">Stella</div>
+          <div class="col-xs-3">Riga</div>
+        </div>
+        <div class="row text-center">
+          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img violet">Immagine</div>
+          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img acqua">Immagine</div>
+          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img black">Immagine</div>          
+          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img azure">Immagine</div>
+          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img blue">Immagine</div>
+          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img pink">Immagine</div>
+        </div>
       </div>
 
     </div>
