--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
       <div class="row pv-portfolio text-center">
         <div class="col-xs-12">Portfolio</div>
-        <div class="row">
-          <div class="col-xs-3 col-xs-offset-2">Riga</div>
-          <div class="col-xs-2">Stella</div>
-          <div class="col-xs-3">Riga</div>
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-3 col-xs-offset-2">Riga</div>
+            <div class="col-xs-2">Stella</div>
+            <div class="col-xs-3">Riga</div>
+          </div>
         </div>
         <div class="row text-center">
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img violet">Immagine</div>
