--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
       <div class="row pv-header text-center">
         <div class="col-xs-12 pv-header-img">Immagine</div>
         <div class="col-xs-12">Start Bootstrap</div>
-        <div class="row">
+        <div class="col-xs-12">
+          <div class="row">
           <div class="col-xs-3 col-xs-offset-2">Riga</div>
           <div class="col-xs-2">Stella</div>
           <div class="col-xs-3">Riga</div>
         </div>
-        <div class="row">
+        </div>
+        <div class="col-xs-12">
+          <div class="row">
           <div class="col-xs-6 col-sm-4">Graphic Artist</div>
           <div class="col-xs-6 col-sm-4">Web Designer</div>
           <div class="col-xs-12 col-sm-4">Illustrator</div>
+        </div>
         </div>
       </div>
 
@@ -46,13 +50,15 @@
             <div class="col-xs-3">Riga</div>
           </div>
         </div>
-        <div class="row text-center">
+        <div class="col-xs-12">
+          <div class="row text-center">
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img violet">Immagine</div>
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img acqua">Immagine</div>
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img black">Immagine</div>          
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img azure">Immagine</div>
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img blue">Immagine</div>
           <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img pink">Immagine</div>
+        </div>
         </div>
       </div>
 
