--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
         </div>
         <div class="col-xs-12">
-          <div class="row">
-          <div class="col-xs-6 col-sm-4">Graphic Artist</div>
-          <div class="col-xs-6 col-sm-4">Web Designer</div>
-          <div class="col-xs-12 col-sm-4">Illustrator</div>
-        </div>
+          <div class="row pv-row-80">
+            <div class="col-xs-6 col-sm-4">Graphic Artist</div>
+            <div class="col-xs-6 col-sm-4">Web Designer</div>
+            <div class="col-xs-12 col-sm-4">Illustrator</div>
+          </div>
         </div>
       </div>
 
@@ -51,15 +51,49 @@
           </div>
         </div>
         <div class="col-xs-12">
-          <div class="row text-center">
-          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img violet">Immagine</div>
-          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img acqua">Immagine</div>
-          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img black">Immagine</div>          
-          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img azure">Immagine</div>
-          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img blue">Immagine</div>
-          <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img pink">Immagine</div>
+          <div class="row pv-row-80">
+            <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img violet">Immagine</div>
+            <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img acqua">Immagine</div>
+            <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img black">Immagine</div>          
+            <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img azure">Immagine</div>
+            <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img blue">Immagine</div>
+            <div class="col-xs-12 col-sm-6 col-lg-4 pv-portfolio-img pink">Immagine</div>
+          </div>
         </div>
+      </div>
+
+      <div class="row pv-about text-center">
+        <div class="col-xs-12">About</div>
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-3 col-xs-offset-2">Riga</div>
+            <div class="col-xs-2">Stella</div>
+            <div class="col-xs-3">Riga</div>
+          </div>
         </div>
+        <div class="col-xs-12">
+          <div class="row pv-row-80">
+            <div class="col-xs-12 col-sm-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla temporibus quam expedita voluptatibus quidem consectetur impedit, itaque iste pariatur blanditiis?</div>
+            <div class="col-xs-12 col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. In non, quos modi reiciendis iste ad earum labore numquam ratione temporibus.</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row contact pv-row-80">
+        <div class="col-xs-12 text-center">Contact Me</div>
+        <div class="col-xs-12 text-center">
+          <div class="row">
+            <div class="col-xs-3 col-xs-offset-2">Riga</div>
+            <div class="col-xs-2">Stella</div>
+            <div class="col-xs-3">Riga</div>
+          </div>
+        </div>
+        <div class="col-xs-12">Name</div>
+        <div class="col-xs-12">Email Address</div>
+        <div class="col-xs-12">Phone Number</div>
+        <div class="col-xs-12">Message</div>
+        <div class="col-xs-12"><button type="button" class="btn btn-success">Send</button></div>
+
       </div>
 
     </div>
