--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-xs-12">Email Address</div>
         <div class="col-xs-12">Phone Number</div>
         <div class="col-xs-12">Message</div>
-        <div class="col-xs-12"><button type="button" class="btn btn-success">Send</button></div>
+        <div class="col-xs-12"><button type="button" class="btn btn-default">Send</button></div>
 
       </div>
 
