--- a/index.html
+++ b/index.html
@@ -93,7 +93,36 @@
         <div class="col-xs-12">Phone Number</div>
         <div class="col-xs-12">Message</div>
         <div class="col-xs-12"><button type="button" class="btn btn-default">Send</button></div>
+      </div>
 
+      <div class="row footer-top text-center">
+        <div class="col-xs-12 col-md-4">
+          <div class="row">
+            <div class="col-xs-12">Location</div>
+            <div class="col-xs-12">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="row">
+            <div class="col-xs-12">Around the web</div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">Facebook</div>
+            <div class="col-xs-3">Google</div>
+            <div class="col-xs-3">Twitter</div>
+            <div class="col-xs-3">Linkedin</div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="row">
+            <div class="col-xs-12">About Freelancer</div>
+            <div class="col-xs-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, adipisci?</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row footer text-center">
+        <div class="col-xs-12">Lorem ipsum dolor sit amet.</div>
       </div>
 
     </div>
