--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
           </div>
         </div>
       </div>
+      <div class="pv-header-bottom pv-bg-green pv-padding-80">
+        <div class="pv-jumbotron">
+            <div class="row">
+              <div class="col-xs-12">
+               <img src="img/avatar.svg" alt="avatar">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 text-center star pv-margin-bottom-20">
+                <h2 class="text-uppercase pv-fs-40">Start Bootstrap</h2>
+                <span class="glyphicon glyphicon-star pv-fs-30 pv-padding-30" aria-hidden="true"></span>
+              </div>
+            </div>
+          <ul class="text-center text-uppercase pv-fs-30 pv-padding-30">
+            <li>Graphic Artist -</li>
+            <li>Web designer -</li>
+            <li>Illustrator</li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
