--- a/index.html
+++ b/index.html
@@ -47,9 +47,54 @@
     </header>
 
     <main>
-      <sectio id="portfolio"></sectio>
-      <sectio id="about"></sectio>
-      <sectio id="contact"></sectio>
+      <section id="portfolio" class="pv-padding-80">
+        <div class="container">
+          <div class="row pv-padding-30">
+            <div class="col-xs-12 text-center star pv-margin-bottom-20">
+              <h2 class="text-uppercase pv-fs-40">Portfolio</h2>
+              <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="pv-box">
+                <img src="img/cabin.png" class="img-responsive img-rounded" alt="cabin">
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="pv-box">
+                <img src="img/cake.png" class="img-responsive img-rounded" alt="cake">
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="pv-box">
+                <img src="img/circus.png" class="img-responsive img-rounded" alt="circus">
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="pv-box">
+                <img src="img/game.png" class="img-responsive img-rounded" alt="game">
+              </div>
+            </div><div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="pv-box">
+                <img src="img/safe.png" class="img-responsive img-rounded" alt="safe">
+              </div>
+            </div><div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="pv-box">
+                <img src="img/submarine.png" class="img-responsive img-rounded" alt="submarine">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="about">
+
+      </section>
+
+      <section id="contact">
+
+      </section>
     </main>
 
     <footer>
