--- a/index.html
+++ b/index.html
@@ -89,6 +89,31 @@
       </section>
 
       <section id="about">
+        <div class="container">
+          <div class="row pv-padding-30">
+            <div class="col-xs-12 text-center star pv-margin-bottom-20">
+              <h2 class="text-uppercase pv-fs-40">About</h2>
+              <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="pv-wrapper-50">
+          <div class="container-fluid">
+            <div class="row pv-fs-20">
+              <div class="col-xs-12 col-sm-6">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization. </div>
+              <div class="col-xs-12 col-sm-6">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-left text-center pv-padding-30">
+            <button class="btn pv-fs-20"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download</button>
+            </div>
+          </div>
+        </div>
 
       </section>
 
