--- a/index.html
+++ b/index.html
@@ -114,11 +114,18 @@
             </div>
           </div>
         </div>
-
       </section>
 
       <section id="contact">
-
+        <div class="container">
+          <div class="row pv-padding-30">
+            <div class="col-xs-12 text-center star pv-margin-bottom-20">
+              <h2 class="text-uppercase pv-fs-40">Contact</h2>
+              <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
+            </div>
+          </div>
+        </div>
+        
       </section>
     </main>
 
