--- a/index.html
+++ b/index.html
@@ -125,7 +125,22 @@
             </div>
           </div>
         </div>
-        
+        <div class="pv-wrapper-50">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12 pv-padding-20 pv-fs-20"> 
+                <input type="text" class="pv-form" placeholder="Name">
+              </div>
+              <div class="col-xs-12 pv-padding-20 pv-fs-20"> 
+                <input type="email" class="pv-form" placeholder="Email Address">
+              </div>
+              <div class="col-xs-12 pv-padding-20 pv-fs-20"> 
+                <input type="text" class="pv-form" placeholder="Phone Number">
+              </div>
+              <textarea class="pv-form pv-padding-20 pv-fs-20" placeholder="Message" rows="8"></textarea>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
