--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 text-left text-center pv-padding-30">
+            <div class="col-xs-12 text-center pv-padding-30">
             <button class="btn pv-fs-20"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download</button>
             </div>
           </div>
@@ -138,6 +138,11 @@
                 <input type="text" class="pv-form" placeholder="Phone Number">
               </div>
               <textarea class="pv-form pv-padding-20 pv-fs-20" placeholder="Message" rows="8"></textarea>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 pv-padding-20">
+              <button class="btn send pv-fs-20">Send</button>
+              </div>
             </div>
           </div>
         </div>
