--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <title>Bootstrap 101 Template</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -101,8 +102,14 @@
         <div class="pv-wrapper-50">
           <div class="container-fluid">
             <div class="row pv-fs-20">
-              <div class="col-xs-12 col-sm-6">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization. </div>
-              <div class="col-xs-12 col-sm-6">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
+              <div class="col-xs-12 col-sm-6"> 
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization.
+                </p> 
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!   
+                </p> 
+              </div>
             </div>
           </div>
         </div>
@@ -150,8 +157,39 @@
     </main>
 
     <footer>
-      <div class="pv-footer-top"></div>
-      <div class="pv-footer-bottom"></div>
+      <div class="pv-footer-top pv-padding-80">
+        <div class="container">
+          <div class="row text-center pv-fs-20">
+            <div class="col-md-4">
+              <h4 class="text-uppercase">Location</h4>
+              <p class="pv-padding-20">2215 John Daniel Drive Clark, MO 54243</p>
+            </div>
+            <div class="col-md-4">
+              <h4 class="text-uppercase">Around the web</h4>
+              <ul class="footer-social pv-padding-20">
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              </ul>
+            </div>
+            <div class="col-md-4"><h4 class="text-uppercase">About freelancer</h4>
+            <p class="pv-padding-20">Freelance is a free to use, open source Bootsrap theme created by Start Bootstrap.</p></div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="pv-footer-bottom pv-padding-30">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center">
+              <p>Copyright <span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Your Website 2019</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
