--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="pv-header-top">
         <div class="container">
           <div class="row">
-            <div class="col-xs-6">Sinistra</div>
+            <div class="col-xs-6 text-uppercase pv-fs-30">Start Bootstrap</div>
             <div class="col-xs-6 text-right"><nav class="hidden-xs">menù lungo normale</nav></div>
-            <div class="visible-xs text-right">Hamburger</div>
+            <div class="visible-xs text-right pv-fs-30"><span class="glyphicon glyphicon-menu-hamburger pv-hamb" aria-hidden="true"></span></div>
           </div>
         </div>
       </div>
