migliorato devo aggiungere righe

--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
       <div class="pv-header-top">
         <div class="container">
           <div class="row">
-            <div class="col-xs-6 text-uppercase pv-fs-30">Start Bootstrap</div>
-            <div class="col-xs-6 text-right"><nav class="hidden-xs">menù lungo normale</nav></div>
-            <div class="visible-xs text-right pv-fs-30"><span class="glyphicon glyphicon-menu-hamburger pv-hamb" aria-hidden="true"></span></div>
+            <div class="col-xs-6 text-uppercase pv-fs-30">
+              <h2>
+              Start Bootstrap
+              </h2> 
+            </div>
+            <div class="col-xs-6 text-center">
+              <nav class="hidden-xs">
+                <ul class="pv-ul-hidden pv-fs-18 text-uppercase">
+                  <li>Portfolio</li>
+                  <li>About</li>
+                  <li>Contact</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="visible-xs text-right pv-fs-30">
+              <span class="glyphicon glyphicon-menu-hamburger pv-hamb" aria-hidden="true"></span>
+            </div>
           </div>
         </div>
       </div>
