--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-12 text-center star pv-margin-bottom-20">
+              <div class="col-xs-12 text-center pv-margin-bottom-20">
                 <h2 class="text-uppercase pv-fs-40">Start Bootstrap</h2>
                 <span class="glyphicon glyphicon-star pv-fs-30 pv-padding-30" aria-hidden="true"></span>
               </div>
             </div>
-          <ul class="text-center text-uppercase pv-fs-30 pv-padding-30">
-            <li>Graphic Artist -</li>
-            <li>Web designer -</li>
-            <li>Illustrator</li>
-          </ul>
+            <ul class="text-center text-uppercase pv-fs-30 pv-padding-30">
+              <li>Graphic Artist -</li>
+              <li>Web designer -</li>
+              <li>Illustrator</li>
+            </ul>
         </div>
       </div>
     </header>
