--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
               <h4 class="text-uppercase">Around the web</h4>
               <ul class="footer-social pv-padding-20">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
               </ul>
