--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                <img src="img/avatar.svg" alt="avatar">
               </div>
             </div>
-            <div class="row">
+            <div class="row pv-rel">
               <div class="col-xs-12 text-center pv-margin-bottom-20">
                 <h2 class="text-uppercase pv-fs-40">Start Bootstrap</h2>
-                <span class="glyphicon glyphicon-star pv-fs-30 pv-padding-30" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-star pv-fs-30 pv-padding-30 pv-line" aria-hidden="true"></span>
               </div>
             </div>
             <ul class="text-center text-uppercase pv-fs-30 pv-padding-30">
@@ -65,7 +65,7 @@
       <section id="portfolio" class="pv-padding-80">
         <div class="container">
           <div class="row pv-padding-30">
-            <div class="col-xs-12 text-center star pv-margin-bottom-20">
+            <div class="col-xs-12 text-center pv-margin-bottom-20">
               <h2 class="text-uppercase pv-fs-40">Portfolio</h2>
               <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
             </div>
