--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="col-xs-6 text-center">
               <nav class="hidden-xs">
                 <ul class="pv-ul-hidden pv-fs-18 text-uppercase">
-                  <li>Portfolio</li>
-                  <li>About</li>
-                  <li>Contact</li>
+                  <li> <a href="#portfolio">Portfolio</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#contact">Contact</a> </li>
                 </ul>
               </nav>
             </div>
@@ -49,7 +49,9 @@
             <div class="row pv-rel">
               <div class="col-xs-12 text-center pv-margin-bottom-20">
                 <h2 class="text-uppercase pv-fs-40">Start Bootstrap</h2>
-                <span class="glyphicon glyphicon-star pv-fs-30 pv-padding-30 pv-line" aria-hidden="true"></span>
+                <div class="pv-star-white">
+                  <i class="fas fa-star"></i>
+                </div>
               </div>
             </div>
             <ul class="text-center text-uppercase pv-fs-30 pv-padding-30">
@@ -67,7 +69,9 @@
           <div class="row pv-padding-30">
             <div class="col-xs-12 text-center pv-margin-bottom-20">
               <h2 class="text-uppercase pv-fs-40">Portfolio</h2>
-              <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
+              <div class="pv-star-blue">
+                <i class="fas fa-star"></i>
+              </div>
             </div>
           </div>
           <div class="row">
@@ -108,7 +112,9 @@
           <div class="row pv-padding-30">
             <div class="col-xs-12 text-center star pv-margin-bottom-20">
               <h2 class="text-uppercase pv-fs-40">About</h2>
-              <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
+              <div class="pv-star-white">
+                <i class="fas fa-star"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -142,7 +148,9 @@
           <div class="row pv-padding-30">
             <div class="col-xs-12 text-center star pv-margin-bottom-20">
               <h2 class="text-uppercase pv-fs-40">Contact</h2>
-              <span class="glyphicon glyphicon-star pv-fs-30" aria-hidden="true"></span>
+              <div class="pv-star-blue">
+                <i class="fas fa-star"></i>
+              </div>
             </div>
           </div>
         </div>
